--- a/templates/default/styles.css
+++ b/templates/default/styles.css
@@ -1,7 +1,5 @@
 body {
-
 	font-size: 12pt;
-	text-align: right;
 	color: #000;
 	font-weight: bold;
 	padding: 20px;
@@ -10,6 +8,8 @@ body {
 	width: 100%;
 	height: 100%;
 	position: relative;
+	margin-right: 5px;
+	text-align: right;
 }
 h3, p, ul, li {
 	margin: 5px 0;
@@ -20,14 +20,12 @@ h3, p, ul, li {
 	display: inline-block;
 	-webkit-user-select: none;
 	user-select: none;
-	text-align: right;
 	line-height: 0.9;
 	margin-left: 100px;
 }
 .reload {
 	text-align: left;
 	margin-left: -50px;
-
 }
 .header_episodes {
 	text-align: left;
@@ -40,6 +38,9 @@ h3, p, ul, li {
 .header_span {
 	text-align: right;
 	background: rgba(255, 255, 0, 0.5);
+}
+.header_p {
+	text-align: left;
 }
 .header {
 	font-size: 29pt;
@@ -77,7 +78,7 @@ li {
 	line-height: 0.8;
 	margin-left: 50px;
 }
-div
+div {
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
