--- a/templates/no_background/one_title.html
+++ b/templates/no_background/one_title.html
@@ -20,6 +20,7 @@
         <div>
             {{ announce_html|safe }}
             {{ status_html|safe }}
+            {{ team_html|safe }}
             {{ description_html|safe }}
             {{ genres_html|safe }}
             {{ year_html|safe }}
