--- a/templates/default/one_title.html
+++ b/templates/default/one_title.html
@@ -23,6 +23,7 @@
         <div>
             {{ announce_html|safe }}
             {{ status_html|safe }}
+            {{ team_html|safe }}
             {{ description_html|safe }}
             {{ genres_html|safe }}
             {{ year_html|safe }}
