--- a/templates/default/text_list.html
+++ b/templates/default/text_list.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-	<p class="header_p">{{ title.title_id }} | {{ year_html|safe }}</p>
+	<p class="header_left">{{ status_html|safe }} | {{ title.title_id }} | {{ year_html|safe }}</p>
             <div class="header">
                 <a href="display_info/{{ title.title_id }}">{{ title.name_en }} ({{ title.name_ru }})</a>
             </div>
