--- a/templates/no_background/styles.css
+++ b/templates/no_background/styles.css
@@ -44,6 +44,11 @@ h3, p, ul, li {
 .header_p {
 	text-align: left;
 }
+.header_left {
+	text-align: right;
+	margin-left: 40px;
+	background: rgba(255, 255, 255, 0.0);
+}
 .header {
 	font-size: 29pt;
 	text-shadow: 1px 1px 2px #FFF;
