--- a/templates/no_background_night/one_title.html
+++ b/templates/no_background_night/one_title.html
@@ -26,6 +26,7 @@
             {{ year_html|safe }}
             {{ type_html|safe }}
         </div>
+        <div>{{ franchise_html|safe }}</div>
         <div>
             {{ episodes_html|safe }}
         </div>
