--- a/templates/no_background_night/titles.html
+++ b/templates/no_background_night/titles.html
@@ -30,6 +30,7 @@
             {{ year_html|safe }}
             {{ type_html|safe }}
         </div>
+        <div>{{ franchise_html|safe }}</div>
         <div>
             {{ episodes_html|safe }}
         </div>
