--- a/templates/default/titles.html
+++ b/templates/default/titles.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
+    <span class="decorate_name">{{ provider_html|safe }}</span>
     <div class="reload">{{ reload_html|safe }}
         <span class="header_span">{{ rating_html|safe }}</span>
     </div>
