--- a/templates/no_background_night/one_title.html
+++ b/templates/no_background_night/one_title.html
@@ -21,6 +21,7 @@
         <div>
             {{ announce_html|safe }}
             {{ status_html|safe }}
+            {{ studio_html|safe }}
             {{ team_html|safe }}
             {{ description_html|safe }}
             {{ genres_html|safe }}
