--- a/templates/default/one_title.html
+++ b/templates/default/one_title.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <span class="decorate_name">{{ provider_html|safe }}</span>
+            {{ provider_html|safe }}
     <div class="reload">{{ reload_html|safe }}
         <span class="header_span">{{ rating_html|safe }}</span>
     </div>
