--- a/templates/no_background_night/titles.html
+++ b/templates/no_background_night/titles.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
-    <span class="decorate_name">{{ provider_html|safe }}</span>
+            {{ provider_html|safe }}
     <div class="reload">{{ reload_html|safe }}
         <span class="header_span">{{ rating_html|safe }}</span>
     </div>
