--- a/templates/no_background/titles.html
+++ b/templates/no_background/titles.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
-            {{ provider_html|safe }}
+    {{ reload_poster_html|safe }} {{ provider_html|safe }}
     <div class="reload">{{ reload_html|safe }}
         <span class="header_span">{{ rating_html|safe }}</span>
     </div>
